時間指定機能修正